; ModuleID = '/home/carl/AnghaBench/glfw/src/extr_linux_joystick.c_pollAbsState.c'
source_filename = "/home/carl/AnghaBench/glfw/src/extr_linux_joystick.c_pollAbsState.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i64*, i32, %struct.input_absinfo* }
%struct.input_absinfo = type { i32 }

@ABS_CNT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_6__*)* @pollAbsState to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pollAbsState(%struct.TYPE_6__* %0) #0 {
  %2 = alloca %struct.TYPE_6__*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.input_absinfo*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %2, align 8
  store i32 0, i32* %3, align 4
  br label %5

5:                                                ; preds = %45, %1
  %6 = load i32, i32* %3, align 4
  %7 = load i32, i32* @ABS_CNT, align 4
  %8 = icmp slt i32 %6, %7
  br i1 %8, label %9, label %48

9:                                                ; preds = %5
  %10 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %11 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %11, i32 0, i32 0
  %13 = load i64*, i64** %12, align 8
  %14 = load i32, i32* %3, align 4
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds i64, i64* %13, i64 %15
  %17 = load i64, i64* %16, align 8
  %18 = icmp slt i64 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %9
  br label %45

20:                                               ; preds = %9
  %21 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %22 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %21, i32 0, i32 0
  %23 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %22, i32 0, i32 2
  %24 = load %struct.input_absinfo*, %struct.input_absinfo** %23, align 8
  %25 = load i32, i32* %3, align 4
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds %struct.input_absinfo, %struct.input_absinfo* %24, i64 %26
  store %struct.input_absinfo* %27, %struct.input_absinfo** %4, align 8
  %28 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %29 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %28, i32 0, i32 0
  %30 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %29, i32 0, i32 1
  %31 = load i32, i32* %30, align 8
  %32 = load i32, i32* %3, align 4
  %33 = call i32 @EVIOCGABS(i32 %32)
  %34 = load %struct.input_absinfo*, %struct.input_absinfo** %4, align 8
  %35 = call i64 @ioctl(i32 %31, i32 %33, %struct.input_absinfo* %34)
  %36 = icmp slt i64 %35, 0
  br i1 %36, label %37, label %38

37:                                               ; preds = %20
  br label %45

38:                                               ; preds = %20
  %39 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %40 = load i32, i32* %3, align 4
  %41 = load %struct.input_absinfo*, %struct.input_absinfo** %4, align 8
  %42 = getelementptr inbounds %struct.input_absinfo, %struct.input_absinfo* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 4
  %44 = call i32 @handleAbsEvent(%struct.TYPE_6__* %39, i32 %40, i32 %43)
  br label %45

45:                                               ; preds = %38, %37, %19
  %46 = load i32, i32* %3, align 4
  %47 = add nsw i32 %46, 1
  store i32 %47, i32* %3, align 4
  br label %5

48:                                               ; preds = %5
  ret void
}

declare dso_local i64 @ioctl(i32, i32, %struct.input_absinfo*) #1

declare dso_local i32 @EVIOCGABS(i32) #1

declare dso_local i32 @handleAbsEvent(%struct.TYPE_6__*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
